--- a/packages/components/base/source/0-base/2-generic/topic/_topic.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic.scss
@@ -3,4 +3,4 @@
 @use './topic-vars';
 
 $vars: meta.module-variables(topic-vars);
-@include custom-properties.styles($vars, true);
+@include custom-properties.styles($vars);
