--- a/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
@@ -7,24 +7,20 @@
 @use './slide-preview/visual-slide-preview';
 
 $vars: meta.module-variables(visual-slider-vars);
-@include custom-properties.styles($vars, true);
+@include custom-properties.styles($vars);
 
 .c-visual-slider {
   // hide preview on small screens
   .c-visual-slide--preview {
     @include breakpoint.media('<s') {
-      /* critical:start */
       @include bourbon.hide-visually;
-      /* critical:end */
     }
   }
 
   // hide bullets on large screens
   .c-slider__bullet {
     @include breakpoint.media('≥s') {
-      /* critical:start */
       display: none;
-      /* critical:end */
     }
   }
 
