--- a/packages/components/content/source/2-molecules/visual/visual.scss
+++ b/packages/components/content/source/2-molecules/visual/visual.scss
@@ -9,33 +9,26 @@
 @use './visual-vars';
 
 $vars: meta.module-variables(visual-vars);
-@include custom-properties.styles($vars, true);
+@include custom-properties.styles($vars);
 
 .c-visual {
-  /* critical:start */
   display: flex;
   flex-direction: column;
   position: relative;
   background: var(--c-visual--background);
   z-index: 1;
   min-height: var(--c-visual--min-height);
-  /* critical:end */
 
   &--full {
-    /* critical:start */
     min-height: 0 !important;
     height: calc(100vh - var(--g-header-height));
-    /* critical:end */
   }
 
   &--no-crop {
-    /* critical:start */
     min-height: 0 !important;
-    /* critical:end */
   }
 
   &__media {
-    /* critical:start */
     position: relative;
 
     &,
@@ -46,22 +39,17 @@ $vars: meta.module-variables(visual-vars);
     .c-visual--full & {
       flex-grow: 1;
     }
-    /* critical:end */
 
     @include breakpoint.media('≥s') {
-      /* critical:start */
       @include bourbon.position(absolute, 0);
 
       .c-visual--no-crop & {
         position: static;
       }
-      /* critical:end */
     }
 
     &--inbox {
-      /* critical:start */
       @include bourbon.position(absolute, 0);
-      /* critical:end */
     }
   }
 
@@ -70,11 +58,9 @@ $vars: meta.module-variables(visual-vars);
   }
 
   &__video {
-    /* critical:start */
     @include bourbon.position(inherit, inherit);
     height: 100%;
     object-fit: cover;
-    /* critical:end */
   }
 
   &__content {
@@ -86,7 +72,6 @@ $vars: meta.module-variables(visual-vars);
   }
 
   .c-headline {
-    /* critical:start */
     --c-headline--color: var(--c-visual_headline--color, inherit);
     margin: 0;
     max-width: none;
@@ -94,50 +79,37 @@ $vars: meta.module-variables(visual-vars);
     &__subheadline {
       --c-headline_subheadline--color: inherit;
     }
-    /* critical:end */
   }
 
   &__text {
-    /* critical:start */
     font: var(--c-visual_text--font);
     font-weight: var(--c-visual_text--font-weight);
     margin: var(--c-visual_text--margin);
-    /* critical:end */
 
     p {
-      /* critical:start */
       font-size: inherit;
       line-height: inherit;
-      /* critical:end */
 
       &:last-child {
-        /* critical:start */
         margin-bottom: 0;
-        /* critical:end */
       }
     }
   }
 
   &__link {
-    /* critical:start */
     margin-top: 1.5em;
-    /* critical:end */
   }
 
   &__continue {
-    /* critical:start */
     position: relative;
     text-align: center;
     margin-top: auto;
-    /* critical:end */
   }
 
   &__continue-btn {
-    /* critical:start */
     color: white;
     transition: transform 0.3s;
     transform: translate(0, -10px);
-    /* critical:end */
 
     &:hover,
     &:focus {
@@ -145,9 +117,7 @@ $vars: meta.module-variables(visual-vars);
     }
 
     .icon {
-      /* critical:start */
       @include bourbon.size(3.5rem);
-      /* critical:end */
     }
   }
 
