--- a/packages/components/base/source/2-molecules/teaser/teaser.scss
+++ b/packages/components/base/source/2-molecules/teaser/teaser.scss
@@ -4,7 +4,7 @@
 @use './teaser-vars';
 
 $vars: meta.module-variables(teaser-vars);
-@include custom-properties.styles($vars, true);
+@include custom-properties.styles($vars);
 
 .c-teaser {
   box-sizing: border-box;
