--- a/packages/components/content/source/2-molecules/contact/contact.scss
+++ b/packages/components/content/source/2-molecules/contact/contact.scss
@@ -4,7 +4,7 @@
 @use './contact-vars';
 
 $vars: meta.module-variables(contact-vars);
-@include custom-properties.styles($vars, true);
+@include custom-properties.styles($vars);
 
 .c-contact {
   display: flex;
