feat: add background- & text-color tokens
#622

--- a/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
@@ -2,7 +2,7 @@ $name-: 'g-headline' !default;
 
 $host: (
   ':root': (
-    color: var(--color-black),
+    color: var(--ks-text-color-default),
     font: var(--font-display-m),
     font-weight: var(--font-weight-bold),
     text-transform: null,
