--- a/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
+++ b/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
@@ -5,7 +5,7 @@ $host: (
     font: var(--font-copy-m),
     vertical-spacing: var(--spacing-m),
     horizontal-spacing: 1em,
-    color: var(--color-black),
+    color: var(--ks-text-color-default),
     font-weight: var(--font-weight-regular),
   ),
 ) !default;
