--- a/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
+++ b/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
@@ -5,7 +5,7 @@ $box: (
     size: 1rem,
     border: 1px solid,
     border-color: var(--color-primary-alpha-8),
-    background: var(--color-white),
+    background: var(--ks-background-color-interface-interactive),
   ),
   '.c-form-check--checkbox': (
     border-radius: 3px,
