--- a/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
@@ -2,7 +2,7 @@ $name-: 'g-topic' !default;
 
 $host: (
   ':root': (
-    color: var(--color-black),
+    color: var(--ks-text-color-default),
     font: var(--font-display-l),
     font-weight: var(--font-weight-bold),
     text-transform: null,
