--- a/packages/components/base/source/2-molecules/slider/slider-bullet/_slider-bullet.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-bullet/_slider-bullet.scss
@@ -9,6 +9,7 @@
   transition: inherit;
   margin: var(--c-slider_bullet--margin);
   display: inline-block;
+  background: var(--c-slider_bullet--background);
 
   .c-slider-nav__slide--active & {
     border-color: var(--c-slider_bullet--outline-color-active);
