--- a/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
@@ -9,8 +9,9 @@ $nav: (
 $preview: (
   '.c-visual-slider': (
     font: var(--font-ui-s),
-    background-hover: var(--color-black-alpha-1),
-    background-active: var(--color-black-alpha-2),
+    background: var(--ks-background-color-interface-interactive),
+    background-hover: var(--ks-background-color-interface-interactive-hover),
+    background-active: var(--ks-background-color-interface-interactive-current),
     color-hover: null,
     color-active: var(--color-primary),
     autoplay-indicator-color: var(--color-black-alpha-2),
